--- a/public/breaddit.css
+++ b/public/breaddit.css
@@ -1,22 +1,27 @@
 body {
-  background: black;
-  color: white;
+  background: #030303;
+  color: #d7dadc;
   text-align: center;
 }
 
 #nav {
     font-family: 'Rubik', sans-serif;
+    background: #1A1A1B;
 }
   
 #search {
-    background: black;
-    color: white;
+    background: #272729;
+    color: #d2d5d7;
     padding-left: 2.375rem;
 }
 
 #submit {
     color: white;
     background: black;
+}
+
+#createbreaddit {
+  background: #1a1a1b;
 }
 
 #sIcon {
@@ -28,12 +33,16 @@ body {
     line-height: 2.375rem;
     text-align: center;
     pointer-events: none;
-    color: #aaa;
+    color: #818384;
 }
 
 #pfp {
   height: 20px;
   width: 20px;
+}
+
+#postbreaddit {
+  color: #d7dadc;
 }
 
 .hidden {
